--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 
 <div id="header">
 <input placeholder="Enter the word" id="input">
-<button id="btn">Search</button>
+<button id="btn" type="submit">Search</button>
 
 </div>
 
