added stling using bootstrap

--- a/Index.html
+++ b/Index.html
@@ -5,14 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="DictionaryStyle.CSS">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+    <title>English Dictionary</title>
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4033/4033369.png" type="image/x-icon"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
 </head>
 <body>
 <h1 id="title">Free Dictionary</h1>
 
-<div id="header">
-<input placeholder="Enter the word" id="input">
-<button id="btn" type="submit">Search</button>
+
+<div class="d-flex justify-content-center inputF">
+<form class="d-flex justify-content-center" role="search">
+    <input class="form-control me-2 w-75 " placeholder="Search" aria-label="Search" id="input" type="search">
+    <button class="btn btn-light" type="submit" id="btn">Search</button>
+  </form>  
+</div>
+<!-- <form action="submit" >
+<input class="form-control" type="search" placeholder="Enter the word" id="input" aria-label="Search">
+<button id="btn" type="submit" class="btn btn-outline-success">Search</button>
+</form> -->
 
 </div>
 
@@ -25,6 +36,8 @@
 <ul id="synonymList"></ul>
 <ul id="antonymsList"></ul>
 <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 <script src="DictionaryJS.js"></script>
 </body>
 </html>
